--- a/app/index.html
+++ b/app/index.html
@@ -6,10 +6,15 @@
     <title>My Cool Project</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   </head>
-  <body>
-    <div class="container">
-      <p>Welcome to your life.</p>
+  <body ng-app='app'>
+    <div class="container" ng-controller='MainController'>
+       <form ng-submit="addTodoItem(newtask)">
+            <input class="button" type="button" value="{{value}}" ng-click="addone()">
+       </form>
+       <hr>
+ 
     </div>
     <script src="js/bundle.js"></script>
   </body>
